--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -4,83 +4,85 @@ stages:
   - test
   - deploy
 
-# Template for reusable build stages
+# Reusable build template
 .build-template:
   stage: build
   script:
     - echo "Building on $PLATFORM with $TOOLCHAIN_IMAGE"
-    - mkdir -p build/$PLATFORM/
-    - touch build/$PLATFORM/$PLATFORM-build-output
     - echo "Build complete for $PLATFORM"
   artifacts:
     paths:
       - build/$PLATFORM/
-  tags:
-    - docker
 
-# Build jobs for each platform
+# Build for PowerPC platform
 build:PowerPC:
   extends: .build-template
   variables:
     PLATFORM: "PowerPC"
     TOOLCHAIN_IMAGE: "powerpc-toolchain:latest"
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
+    - if: $CI_PIPELINE_SOURCE == "push"
 
+# Build for imx8 platform
 build:imx8:
   extends: .build-template
   variables:
     PLATFORM: "imx8"
     TOOLCHAIN_IMAGE: "imx8-toolchain:latest"
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-    - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_TAG'
+    - if: $CI_PIPELINE_SOURCE == "push"
+    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_TAG
 
+# Build for Linux-x platform
 build:Linux-x:
   extends: .build-template
   variables:
     PLATFORM: "Linux-x"
     TOOLCHAIN_IMAGE: "linux-x-toolchain:latest"
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
+    - if: $CI_PIPELINE_SOURCE == "push"
 
-# Static code analysis using an external shared template
-include:
-  - project: 'external/repo-with-templates'
-    file: '/static-code-analysis.yml'
-
-# Placeholder for static code analysis stages (assuming external templates handle details)
+# Static code analysis for PowerPC
 static_code_analysis:PowerPC:
   stage: static_code_analysis
+  script:
+    - echo "Running static analysis for PowerPC"
+    - ./run-static-analysis.sh --platform=PowerPC
   variables:
     PLATFORM: "PowerPC"
-    ARGUMENTS: "--analyze-powerpc"
   rules:
     - exists:
         - "**/*.c"
         - "**/*.cpp"
 
+# Static code analysis for imx8
 static_code_analysis:imx8:
   stage: static_code_analysis
+  script:
+    - echo "Running static analysis for imx8"
+    - ./run-static-analysis.sh --platform=imx8
   variables:
     PLATFORM: "imx8"
-    ARGUMENTS: "--analyze-imx8"
   rules:
     - exists:
         - "**/*.c"
         - "**/*.cpp"
 
+# Static code analysis for Linux-x
 static_code_analysis:Linux-x:
   stage: static_code_analysis
+  script:
+    - echo "Running static analysis for Linux-x"
+    - ./run-static-analysis.sh --platform=Linux-x
   variables:
     PLATFORM: "Linux-x"
-    ARGUMENTS: "--analyze-linux-x"
   rules:
     - exists:
         - "**/*.c"
         - "**/*.cpp"
 
-# Test jobs for each platform
+# Test for PowerPC
 test:PowerPC:
   stage: test
   script:
@@ -88,9 +90,8 @@ test:PowerPC:
     - ./run-tests.sh --platform=PowerPC
   dependencies:
     - build:PowerPC
-  tags:
-    - docker
 
+# Test for imx8
 test:imx8:
   stage: test
   script:
@@ -98,9 +99,8 @@ test:imx8:
     - ./run-tests.sh --platform=imx8
   dependencies:
     - build:imx8
-  tags:
-    - docker
 
+# Test for Linux-x
 test:Linux-x:
   stage: test
   script:
@@ -108,10 +108,8 @@ test:Linux-x:
     - ./run-tests.sh --platform=Linux-x
   dependencies:
     - build:Linux-x
-  tags:
-    - docker
 
-# Deploy jobs for each platform
+# Deploy for PowerPC
 deploy:PowerPC:
   stage: deploy
   script:
@@ -121,9 +119,8 @@ deploy:PowerPC:
     - ./smoke-test.sh --platform=PowerPC
   dependencies:
     - build:PowerPC
-  tags:
-    - docker
 
+# Deploy for imx8
 deploy:imx8:
   stage: deploy
   script:
@@ -133,9 +130,8 @@ deploy:imx8:
     - ./smoke-test.sh --platform=imx8
   dependencies:
     - build:imx8
-  tags:
-    - docker
 
+# Deploy for Linux-x
 deploy:Linux-x:
   stage: deploy
   script:
@@ -145,5 +141,3 @@ deploy:Linux-x:
     - ./smoke-test.sh --platform=Linux-x
   dependencies:
     - build:Linux-x
-  tags:
-    - docker
